[gd_scene load_steps=8 format=3 uid="uid://5rh2juaflgb3"]

[ext_resource type="Script" uid="uid://bvfbyqdwcxt2m" path="res://Code/nav_npc.gd" id="1_5lhyt"]
[ext_resource type="PackedScene" uid="uid://cnxhny204y4ev" path="res://Art/models/wumb.glb" id="2_gwovb"]
[ext_resource type="Material" uid="uid://dru7x1u6j3him" path="res://Art/materials/outline_mat_big.tres" id="3_7ni53"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gwovb"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5lhyt"]
height = 4.0
radius = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7ni53"]
height = 2.7
radius = 0.970215

[sub_resource type="BoxShape3D" id="BoxShape3D_gwovb"]
size = Vector3(2, 1, 1.5)

[node name="NavNPC" type="CharacterBody3D"]
script = ExtResource("1_5lhyt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_gwovb")

[node name="Hitbox" type="Area3D" parent="." groups=["Enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CylinderShape3D_5lhyt")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
debug_enabled = true

[node name="wumb2" parent="." instance=ExtResource("2_gwovb")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="wumb2/wumb skeleton" index="0"]
bones/0/position = Vector3(0, 0, 0)
bones/2/rotation = Quaternion(0, 1.19209e-07, 0, 1)
bones/3/position = Vector3(1.03882, 0.894776, -0.00371003)
bones/3/rotation = Quaternion(0.268415, 0.10953, -0.819818, 0.493817)
bones/4/rotation = Quaternion(0.660588, -0.0877309, -0.221471, 0.711953)
bones/5/rotation = Quaternion(0.778725, -0.154838, 0.0157348, 0.607754)
bones/7/rotation = Quaternion(0.243886, -0.0185725, -0.025228, 0.969298)
bones/8/position = Vector3(-0.600954, 0.882374, 0.0370615)
bones/8/rotation = Quaternion(-0.0403785, -0.0154339, 0.881768, 0.469699)
bones/9/rotation = Quaternion(0.632487, -0.0254447, 0.105931, 0.766871)
bones/10/rotation = Quaternion(0.70706, 0.064923, -0.191584, 0.677604)
bones/12/rotation = Quaternion(0.586719, 0.394666, 0.586719, -0.394666)
bones/13/rotation = Quaternion(-0.623629, 0.0314929, 0.0390731, 0.780108)
bones/14/rotation = Quaternion(0.0211217, -0.00541234, -0.000988452, 0.999762)
bones/15/rotation = Quaternion(0.0252219, 0.0247486, -0.727494, 0.685203)
bones/17/rotation = Quaternion(-0.623629, -0.0314929, -0.0390731, 0.780108)
bones/18/rotation = Quaternion(0.0211217, 0.00541234, 0.000988452, 0.999762)
bones/19/rotation = Quaternion(0.0252219, -0.0247486, 0.727494, 0.685203)

[node name="wumb" parent="wumb2/wumb skeleton/Skeleton3D" index="0"]
material_overlay = ExtResource("3_7ni53")

[node name="AnimationPlayer" parent="wumb2" index="1"]
speed_scale = 2.0

[node name="Attack Range" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack Range"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.835938, 0)
shape = SubResource("CylinderShape3D_7ni53")

[node name="Attack Box" type="Area3D" parent="." groups=["Enemy Attack"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, -0.75)
shape = SubResource("BoxShape3D_gwovb")
disabled = true
debug_color = Color(1, 0, 0.166667, 1)

[connection signal="body_entered" from="Attack Range" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack Range" to="." method="_on_attack_range_body_exited"]
[connection signal="area_entered" from="Attack Box" to="." method="_on_attack_box_area_entered"]

[editable path="wumb2"]
